--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 *.class
+*.iws
 .idea
+workspace.xml
+tasks.xml
 ToDo.iml
