--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
                     <target>7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
+                <configuration>
+                    <mainClass>main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
